[b]3.0.5[/b]
- Added: Live setting added to customize live screen (previously live alternate)
- Changed: Settings names updated

[b]3.0.4[/b]
- Changed: Asterisk is added back upon request

[b]3.0.3[/b]
- Added: Alternate Live category added which directly displays streams at the event level
- Changed: Display light green to indicate feed type (home or away) instead of the difficult to see asterisk

[b]3.0.2[/b]
- Fixed: Script error addressed in default script

[b]3.0.1[/b]
- Changed: On-demand by date displays favorite team at the top
- Changed: Live event displays favorite team at the top

[b]3.0.0[/b]
- Added: HLS SD option added as derived from HLS HD streams
- Fixed: Omit iStream when it is redundant to HD or SD equivalent

[b]2.9.9[/b]
- Added: HLS stream option added applies to on-demand events
- Changed: Hide flash stream when duplicate of istream
- Changed: Renamed dvr streams to match as the API defines them: nondvr
- Fixed: Condensed game bug fixed

[b]2.9.8[/b]
- Fixed: Home and away indicators fixed within On-Demand event screens
- Added: Events will now display source of non-home/away feeds when available
- Changed: Coming soon events also display above final events

[b]2.9.7[/b]
- Added: Choosing final event now leads directly to on-demand streams
- Added: Added refresh option at the top of live events when the list is large
- Changed: Live events now show at the top
- Changed: Flash events now specify HD or SD when stream URL indicates
- Fixed: Eliminated defunct progressive streams
- Fixed: Fixed bug that prevented condensed game building

[b]2.9.6[/b]
- Changed: Eliminate redundant iStream when duplicates HD or SD stream
- Added: Refresh added at the top when several live events displayed
- Fixed: Standardized plugin directory name

[b]2.9.5[/b]
- Added: Custom date search to on-demand section
- Added: All teams option added under by team category
- Added: OnDemand team filter includes similar events i.e. NHL includes NHL preseason