@@ -19,9 +19,15 @@ def HOME():
     print 'HOME()'
     utils.addDir(addon.getLocalizedString(100005), utils.Mode.ONDEMAND, '', None, 2, showfanart)
     if showaltlive:
-        utils.addDir(addon.getLocalizedString(100006), utils.Mode.LIVEEVENT, '', None, 2, showfanart)
+        # utils.addDir(addon.getLocalizedString(100006), utils.Mode.LIVEEVENT, '', None, 2, showfanart)
+        LIVEEVENT(session)
+        updateListing = refresh
+        cacheToDisc = False
     else:
-        utils.addDir(addon.getLocalizedString(100006), utils.Mode.LIVE, '', None, 2, showfanart)
+        # utils.addDir(addon.getLocalizedString(100006), utils.Mode.LIVE, '', None, 2, showfanart)
+        LIVE(session)
+        updateListing = refresh
+        cacheToDisc = False
 
     setViewMode()
 
