@@ -1,3 +1,6 @@
+[b]3.0.6[/b]
+- Changed: Moved Live Streams to the front page (one less click!)
+
 [b]3.0.5[/b]
 - Added: Live setting added to customize live screen (previously live alternate)
 - Changed: Settings names updated
